[package]
name = "espsign"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
sha2 = "0.10"
rsa = { version = "0.9", features = ["getrandom", "pem"] }
num-bigint = { version = "0.8.2", features = ["i128", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
num-traits = { version = "0.2.9", default-features = false, features = ["libm"] }
crc = "3.2"
embedded-io-async = { version = "0.6", features = ["std"] }
embassy-futures = "0.1"
rand = "0.8"
rand_core = "0.6"
