[package]
name = "espsign"
version = "0.1.0"
edition = "2021"

[features]
default = ["bin"]
bin = ["rsa/pem", "embedded-io-async/std", "rand"]

[dependencies]
log = { version = "0.4", default-features = false }
sha2 = { version = "0.10", default-features = false }
rsa = { version = "0.9", default-features = false }
num-bigint = { version = "0.8.2", default-features = false, features = ["i128", "prime", "zeroize"], package = "num-bigint-dig" }
num-traits = { version = "0.2.9", default-features = false }
crc = { version = "3.2", default-features = false }
embedded-io-async = "0.6"
embassy-futures = "0.1"
rand_core = "0.6"
rand = { version = "0.8", optional = true }
