[package]
name = "espsign"
version = "0.1.0"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "esp32"]
description = "A utility for signing ESP32 firmware images for ESP RSA Secure Boot V2"
repository = "https://github.com/ivmarkov/espsign"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.83"

[[bin]]
name = "espsign"
required-features = ["bin"]

[features]
default = ["bin"]
bin = ["pks", "rsa/std", "embedded-io-async/std", "rand", "clap", "anyhow", "env_logger"]
pks = ["rsa/pem", "rsa/pkcs5"]

[dependencies]
log = { version = "0.4", default-features = false }
sha2 = { version = "0.10", default-features = false }
rsa = { version = "0.9", default-features = false }
num-bigint = { version = "0.8.2", default-features = false, features = ["i128", "prime", "zeroize"], package = "num-bigint-dig" }
num-traits = { version = "0.2.9", default-features = false }
crc = { version = "3.2", default-features = false }
embedded-io-async = "0.6"
embassy-futures = "0.1"
rand_core = "0.6"
rand = { version = "0.8", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
anyhow = { version = "1", optional = true }
env_logger = { version = "0.11", optional = true }
